<resources>
    <string name="app_name">Pass the Bomb</string>
    <string name="open_games">Open Games</string>
    <string name="game_settings">Game Settings</string>
    <string name="scoreboard">Scoreboard</string>

    <!-- toast stuff -->
    <string name="username_required">Please enter your username.</string>
    <string name="game_name_required">Please enter your game\'s name.</string>
    <string name="too_little_players">You need at least two players to start the game!</string>
    <string name="password_required">Please enter a password.</string>
    <string name="wrong_password">That\'s the wrong password! ι(｀ロ´)ノ</string>
    <string name="empty_password_field">You need to input the password…(ー_ー;)</string>

    <!--button stuff -->
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="join_game">Join the game!</string>
    <string name="tutorial">How to Play</string>
    <string name="start">Start Game!</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="refresh">Refresh</string>

    <!-- text field stuff -->
    <string name="request_username">Enter desired username</string>
    <string name="request_game_name">Enter your game\'s name</string>
    <string name="request_password">Enter desired password</string>
    <string name="no_games_message">There are no games available. σ(￣∇￣;)</string>
    <string name="require_password">Please enter the game\'s password:</string>

    <!-- other text stuff -->
    <string name="game_name">Game name</string>
    <string name="game_name_with_colon">Game name:</string>
    <string name="colon">:</string>
    <string name="password">Password</string>
    <string name="player_name">Player name</string>
    <string name="players">Players</string>
    <string name="players_with_colon">Players:</string>
    <string name="empty_player_field">(Empty)</string>
    <string name="score">Score</string>
    <string name="game_over">Game over!</string>
    <string name="to_scoreboard">Continue to scoreboard</string>
    <string name="MSname">MessageService.class</string>
    <string name="CSname">ConnectivityService.class</string>

    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
