<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightBlue"
    tools:context="ch.ethz.inf.vs.gruntzp.passthebomb.activities.CreateActivity">

    <TextView android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name_with_colon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/edit_name"
        android:layout_alignBottom="@+id/edit_name"
        android:layout_alignParentStart="true"/>

    <!-- Note that although singleLine is deprecated,
         it is needed as maxLines=1 does not change the
         "next line" into a "done" button
         and we do not want multiple lines for the game name or for the password
    -->
    <EditText android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/request_game_name"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_alignEnd="@id/game_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <View android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/game_name"
        android:background="?android:attr/listDivider"/>

    <Switch android:id="@+id/switch_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:text="@string/password"
        android:textSize="20sp"/>

    <EditText android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/request_password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="textPassword"
        android:visibility="invisible"
        android:layout_below="@id/switch_password"/>

    <Button android:id="@+id/create_game2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:onClick="onClickCreate"
        android:text="@string/create"/>

</RelativeLayout>
