<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_request_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@color/lightBlue"
    >
    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@null" />

    <TextView
        android:id="@+id/ask_for_password"
        android:layout_below="@id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/require_password" />

    <EditText android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_below="@id/ask_for_password"/>

    <Button android:id="@+id/join_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@id/input_password"
        android:text="@string/join_game"/>
</RelativeLayout>