<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context="ch.ethz.inf.vs.gruntzp.passthebomb.activities.LobbyActivity">

    <TableLayout android:id="@+id/players_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:stretchColumns="0">
        <TableRow>
            <TextView
                android:text="@string/players_with_colon"
                android:padding="16dip"
                android:textColor="#fff"
                android:background="@drawable/cell_shape_dark"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/empty_player_field"
                android:padding="16dip"
                android:textColor="#888"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/empty_player_field"
                android:padding="16dip"
                android:textColor="#888"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/empty_player_field"
                android:padding="16dip"
                android:textColor="#888"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/empty_player_field"
                android:padding="16dip"
                android:textColor="#888"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/empty_player_field"
                android:padding="16dip"
                android:textColor="#888"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
    </TableLayout>

    <Button android:id="@+id/start_game"
        android:layout_centerInParent="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:onClick="onClickStart"
        android:text="@string/start"/>
</RelativeLayout>
