<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scoreboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:paddingTop="81dp"
    tools:context="ch.ethz.inf.vs.gruntzp.passthebomb.activities.ScoreboardActivity">

    <TableLayout android:id="@+id/scores_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:text="@string/player_name"
                android:padding="16dip"
                android:textColor="#fff"
                android:background="@drawable/cell_shape_dark"/>
            <TextView
                android:text="@string/score"
                android:padding="16dip"
                android:textColor="#fff"
                android:textAlignment="viewEnd"
                android:background="@drawable/cell_shape_dark"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:background="@drawable/cell_shape_input"/>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:textAlignment="viewEnd"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:background="@drawable/cell_shape_input"/>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:textAlignment="viewEnd"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:background="@drawable/cell_shape_input"/>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:textAlignment="viewEnd"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:background="@drawable/cell_shape_input"/>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:textAlignment="viewEnd"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:background="@drawable/cell_shape_input"/>
            <TextView
                android:text=""
                android:padding="16dip"
                android:textColor="#000"
                android:textAlignment="viewEnd"
                android:background="@drawable/cell_shape_input"/>
        </TableRow>
    </TableLayout>

    <Button android:id="@+id/back_to_main_menu"
        android:layout_centerInParent="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickBackToMainMenu"
        android:textSize="20sp"
        android:text="@string/back_to_main_menu"/>

</RelativeLayout>
